--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "del": "^2.0.2",
     "eslint-config-google": "^0.3.0",
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^2.0.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.0.0",
     "gulp-cache": "0.2.2",
@@ -18,6 +19,7 @@
     "gulp-imagemin": "^2.0.0",
     "gulp-load-plugins": "^1.0.0",
     "gulp-newer": "^1.0.0",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-sass": "^2.0.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.3.0",
